src/templates/leo.css
@page {
  size: A4;
  margin: 20mm;
}

body, .page {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  color: #000;
  box-sizing: border-box;
  background-color: white;

}

.page {
  width: 210mm;
  min-height: 297mm;
  padding: 10mm;
  position: relative;
  background-color: white;
  font-family: "Times New Roman", Times, serif;
  height:297mm;
  width:210mm;
  display: block;
  margin-left: auto;
  margin-right: auto;
  padding:10mm;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  font-family: 'Times New Roman', Times, serif;
}

.header {
  text-align: center;
}

.header h1 {
  /* font-size: 2rem; */
  margin: 0;
  font-family: 'Times New Roman', Times, serif;
  
}

.content {
  font-size: 12pt;
  line-height: 1.5;
}

.footer {
  position: absolute;
  bottom: 20mm;
  width: calc(210mm - 40mm);
  text-align: center;
  font-size: 10pt;
  color: #666;
}

.header-line {
  border-color: black;
  margin-bottom: 1rem;
}

.school-header {
  display: flex;
  align-items: flex-start;
  /* gap: 2rem; */
  /* margin-bottom: 1rem; */
}

.logo-container {
  flex-shrink: 0;
}

.school-logo {
  height: 100px;
  width: auto;
  object-fit: contain;
}

.school-info {
  flex-grow: 1;
}

.school-name {
  margin: 0;
  font-size: 2.2rem;
  font-weight: 500;
  line-height: 1.4;
}

.school-details {
  /* margin-top: 0.5rem; */
  font-size: 0.9rem;
  line-height: 1.2;
}

.school-details p {
  margin: 0;
}

.order-info {
  display: flex;
  justify-content: space-between;
  margin: 1rem 0;
}

.from-section, .to-section {
  text-align: left;
  margin: 1rem 0;
  white-space: pre-line;
}

.name {
  margin-left: 2rem;
}

.to-content {
  margin-left: 2rem;
  white-space: pre-line;
}

.subject, .ref {
  margin-left: .1rem;
}

.subject-section, .ref-section {
  margin-left: 2rem;
  margin-bottom: 20px;
}

.subject-section {
  margin-bottom: 20px;
}

.letter-content p {
  text-align: justify;
}

.body-paragraph {
  text-align: justify;
  margin-left: 2rem;
  white-space: pre-wrap;
  font-weight: 1;
  font-family:'Times New Roman', Times, serif
}

.yours-faithfully-section {
  text-align: end;
  margin-right:4rem;
}

